# theory-copilot-falsification

./: .audit-patterns  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  SESSION_COORDINATION.md  STATUS.md  pyproject.toml
.devcontainer/: devcontainer.json
config/: datasets.json  lacuna_bench_v1.json
data/: SHA256SUMS  build_dipg_openpecan.py  build_ipf_bal.py  build_lihc_mvi.py  build_tcga_brca.py  build_tcga_kirc_expanded.py  build_tcga_paad.py  immotion150_ccrcc.csv  kirc_metastasis_expanded.csv  kirc_stage_expanded.csv  kirc_survival_expanded.csv  lihc_mvi.csv  paad_survival.csv
docs/: ARTIFACT_INDEX.md  CLAIM_LOCK.md  capability_overhang_measurements.md  capability_overhang_summary.md  clinical_utility.md  demo_walkthrough.md  failure_network_v3_appendix.md  hackathon_compliance.md  headline_findings.md  hpc_session_prompt_platform_generalization.md  judge_faq.md  judging_criteria_audit.md  loom_narration_final_90s.md  loom_narration_final_v3.md  loom_narration_verbatim.md  loom_script.md  loom_visual_cue_map.md  managed_agents_evidence_card.md  methodology.md  public_data_provenance.md  pysr_setup.md  stage1_self_audit.md  submission_description.md  submission_form_draft.md  survivor_narrative.md  why_opus_4_7.md
preregistrations/: 20260423T145849Z_phi1_h2_prop1_top2a_mki67_epas1_vegfa.yaml  20260423T145849Z_phi1_h2_prop4_sqrt_top2a_ccnb1_sqrt_epas1_ndufa4l2.yaml  20260425T164840Z_g2_rigor_extension.yaml  20260425T170647Z_g1_knockoff_v2.yaml  20260425T185717Z_i2_rashomon_set.yaml
prompts/: skeptic_review.md
research/: TRACK_A_task_landscape.md  (+3 more)
(+236 files in other folders)
