[project]
name = "lacuna-discovery"
version = "0.1.0"
description = "Workflow-first discovery artifact scaffold for compact biological law discovery"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "anthropic>=0.40",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
    "httpx>=0.27",
    "lifelines>=0.28",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
lacuna = "lacuna.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
